[package]
name = "ffmpeg_eqty_c2pa"
version = "0.1.0"
edition = "2021"


[dependencies]
c2pa = { git = "https://github.com/YurkoWasHere/c2pa-rs_ffmpeg", branch = "ffmpeg", features = [
    "fetch_remote_manifests",
    "file_io",
    "add_thumbnails",
    "pdf",
] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3.0"
serde_json = "1.0"
chrono = "0.4"
quick-xml = { version = "0.26", features = ["serialize"] }

[lib]
crate-type = ["cdylib"]
